--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "format": "prettier -w .",
     "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "prettier": "^3.2.2",
     "typescript": "^5.3.3",
     "vitest": "^1.0.4"
   }
