--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "format": "prettier -w .",
     "test": "vitest"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
