--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,10 @@
     "moduleResolution": "node",
     "strict": true,
     "skipLibCheck": true,
-    "lib": [
-      "es2019"
-    ],
+    "lib": ["es2019"],
     "outDir": "./dist",
     "module": "esnext",
     "target": "esnext"
   },
-  "exclude": [
-    "*.test.ts",
-    "dist"
-  ]
+  "exclude": ["*.test.ts", "dist"]
 }
